1. gc 日志分析完成