@@ -7,7 +7,7 @@ set -x
 
 __memory=128
 
-#__gc_type=Useserialgc
+#__gc_type=UseSerialGC
 #__gc_type=UseParallelGC
 #__gc_type=UseConcMarkSweepGC
 __gc_type=UseG1GC
@@ -21,7 +21,7 @@ for xx in $(seq 1 6)
 do
     __log_suffix=$__memory-$__gc_type
 
-    java  -XX:+$__gc_type  -Xmx${__memory}m    -XX:+PrintGCDetails -XX:+PrintGCDateStamps \
+    java  -XX:+$__gc_type  -Xmx${__memory}m    -XX:+PrintGCDetails -XX:+PrintGCTimeStamps \
         -Xloggc:./$__log_path_prefix/log-$__log_suffix \
         GCLogAnalysis   > $__log_path_prefix/run-log-$__log_suffix 2>&1
 
